--- a/css/style.css
+++ b/css/style.css
@@ -52,15 +52,24 @@ form {
 
 section {
     margin-top: 40px;
+    background: rgba(255, 255, 255, 0.5);
+    padding: 5px;
+    border-radius: 10px;
 }
 
     h4 {
         margin-bottom: 10px;
         font-size: 24px;
+        text-align: center;
     }
 
-    p {
+    p.date{
         font-size: 18px;
+        padding-bottom: 5px;
+        padding-right: 5px;
+        text-align: right;
+        font-size: 14px;
+        font-style: italic;
     }
 
 
