--- a/css/style.css
+++ b/css/style.css
@@ -55,15 +55,25 @@ form {
 ul {
     list-style-type: none;
     text-align: center;
+    margin: 40px 0 40px 0;
 }
 
     ul li {
         display: inline-block;
         background: rgba(255, 255, 255, 0.6);
-        padding: 7px;
         border-radius: 5px;
         transition: 0.4s;
+        margin-bottom: 5px;
     }
+
+        ul li a {
+            text-decoration: none;
+            /*padding: 10px 10px;*/
+            display: block;
+            width: 20px;
+            padding: 5px;
+            color: #000000;
+        }
 
     ul li:hover {
         background: rgba(255, 255, 255, 1);
@@ -77,7 +87,7 @@ ul {
 section {
     margin-top: 40px;
     background: rgba(255, 255, 255, 0.5);
-    padding: 5px;
+    padding: 5px 15px;
     border-radius: 10px;
 }
 
@@ -89,8 +99,7 @@ section {
 
     p.date{
         font-size: 18px;
-        padding-bottom: 5px;
-        padding-right: 5px;
+        padding: 5px;
         text-align: right;
         font-size: 14px;
         font-style: italic;
